[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "google-api-wrapper2"
version = "1.0.3"
description = ""
authors = ["Szilard Nemeth <szilard.nemeth88@gmail.com>"]
readme = "README.md"
packages = [{include = "googleapiwrapper"}]

[tool.poetry.dependencies]
python = "^3.8"
python-common-lib = "1.0.3"
google-api-python-client = "2.31.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "0.4.6"
oauth2client = "^4.1.3"
gspread = ">=5.1.1"


[tool.poetry.group.dev.dependencies]
python-commons = {git = "https://github.com/szilard-nemeth/python-commons.git"}
flake8 = "^5.0.4"
pytest = ">=3.6"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
black = "*"
autopep8 = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
